--- a/src/App.css
+++ b/src/App.css
@@ -222,3 +222,38 @@ div {
     width: 10em;
   }
 }
+
+
+
+/*Navigation*/
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: transparent;
+  overflow: hidden;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(0, 0, 0);
+}
+.topnav.active{
+  background-color: #131313;
+  transition: background-color 200ms linear;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #6d5858;
+  text-align: center;
+  padding: 5rem;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: Caprasimo;
+  cursor: pointer;
+}
