--- a/src/App.css
+++ b/src/App.css
@@ -239,21 +239,25 @@ div {
   align-items: center;
   justify-content: center;
   color: rgb(0, 0, 0);
+  font-size: 25px;
 }
 .topnav.active{
   background-color: #131313;
   transition: background-color 200ms linear;
+  color: #EE6C4D;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
-  color: #6d5858;
+  color: #2b2114;
   text-align: center;
   padding: 5rem;
   text-decoration: none;
-  font-size: 17px;
-  font-family: Caprasimo;
+  list-style-type: none;
   cursor: pointer;
+}
+.topnav.active a{
+  color: #fff;
 }
